sumo/tests/sumo/output/e1Instant/errors/testsuite.sumo
# id is missing
id_missing

# id is empty
id_empty


# lane is missing
lane_missing

# lane is empty
lane_empty

# lane is unknown
lane_false


# position is missing
pos_missing

# position is empty
pos_empty

# position is not numeric
pos_false

# position is beyond lane's length
pos_too_high



# file is missing
file_missing

# file is empty
file_empty

# file can not be built
file_false



